# sign-language-prototype

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  config.py  create_embedding_database.py  get_embedding.py  key.json  pyproject.toml  query_embedding.py  query_embedding_2.py  spl2videos.py
.github/workflows/: main.yml
assets/: filter_sl_vocab.txt  normalized_train_val_test_dataset_2.json  qipedc_sl_en_vi_processed.json  qipedc_sl_en_word_list.json  qipedc_sl_en_word_list.txt  qipedc_sl_vi_en.json  qipedc_sl_vi_en_processed.json  qipedc_sl_vi_word_list.json  qipedc_sl_viet_word_list_no_phrase.json  qipedc_sl_viet_word_list_no_phrase_normalized.json  qipedc_vi_en.json  qpec_dataset.json  sl_vocab.txt  sl_vocab_vn_en.json
assets/hamnosys2sigml/: 0.xml  1.xml  10.xml  100.xml  1000.xml  1000000.xml  1001.xml  101.xml  11.xml  110.xml  1100000.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  1_thang.xml  1_tháng.xml  2.xml  20.xml  200.xml  21.xml  29.xml  2_thang.xml  2_tháng.xml  3.xml  30.xml  3_thang.xml  3_tháng.xml  4.xml  40.xml  4_thang.xml  4_tháng.xml  5.xml  50.xml  5_th.xml  5_thang.xml  (+2542 more)
notebooks/: SL_T5_FINETUNING.ipynb
outputs/: res.xml
sl2video/: convert_words_to_sigml.py  preprocess_sl_sent.py
spl2sl/: get_sim_words.py  shorten_sent.py  spl2sl.py  spl_sl_grammar_translate.py  translate.py
