[tool.poetry]
name = "sign-language-prototype"
version = "0.1.0"
description = "The goal of the project is to create a demo that is based on the ChatGPT and JASigning translate the Vietnamese spoken language into Vietnamese Sign Language"
authors = ["LeCongThuong <thuongle276@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sign_language_prototype"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tqdm = "^4.65.0"
numpy = "1.22.4"
python-dotenv = "^1.0.0"
transformers = {extras = ["sentencepiece"], version = "^4.31.0"}
accelerate = "^0.21.0"
py-vncorenlp = "^0.1.4"
fasttext = {git = "https://github.com/cfculhane/fastText"}
huggingface-hub = "^0.16.4"
scipy = "1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
